istio/full-cli.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: httpbin-gateway
# spec:
#   # The selector matches the ingress gateway pod labels.
#   # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
#   selector:
#     istio: ingressgateway
#   servers:
#     - port:
#         number: 80
#         name: http
#         protocol: HTTP
#       hosts:
#         - "httpbin.example.com"
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: httpbin
# spec:
#   hosts:
#     - "httpbin.example.com"
#   gateways:
#     - httpbin-gateway
#   http:
#     - match:
#         - uri:
#             prefix: /status
#         - uri:
#             prefix: /delay
#       route:
#         - destination:
#             port:
#               number: 8000
#             host: httpbin
# apiVersion: networking.istio.io/v1beta1
# kind: Gateway
# metadata:
#   name: argocd-gateway
#   namespace: istio-system
# spec:
#   selector:
#     istio: ingressgateway
#   servers:
#     - hosts:
#         - argo.example.com
#       port:
#         name: https
#         number: 443
#         protocol: HTTPS
#       tls:
#         mode: SIMPLE
#         # argo-cert is a tls secret in istio-system namespace, containing a valid TLS cert for the domain name argo.example.com
#         credentialName: argo-cert
#     - hosts:
#         - argo.example.com
#       port:
#         name: http
#         number: 80
#         protocol: HTTP
#       tls:
#         httpsRedirect: true
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: argocd
#   namespace: istio-system
# spec:
#   gateways:
#     - argocd-gateway
#   hosts:
#     - argo.example.com
#   http:
#     - route:
#         - destination:
#             host: argocd-server
#             port:
#               number: 80
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: argocd-gateway
#   namespace: argocd
# spec:
#   selector:
#     istio: ingressgateway
#   servers:
#     - port:
#         number: 80
#         name: http
#         protocol: HTTP
#       hosts:
#         - "*"
#       tls:
#         httpsRedirect: true
#     - port:
#         number: 443
#         name: https
#         protocol: HTTPS
#       hosts:
#         - "*"
#       tls:
#         credentialName: argocd-server-tls
#         maxProtocolVersion: TLSV1_3
#         minProtocolVersion: TLSV1_2
#         mode: SIMPLE
#         cipherSuites:
#           - ECDHE-ECDSA-AES128-GCM-SHA256
#           - ECDHE-RSA-AES128-GCM-SHA256
#           - ECDHE-ECDSA-AES128-SHA
#           - AES128-GCM-SHA256
#           - AES128-SHA
#           - ECDHE-ECDSA-AES256-GCM-SHA384
#           - ECDHE-RSA-AES256-GCM-SHA384
#           - ECDHE-ECDSA-AES256-SHA
#           - AES256-GCM-SHA384
#           - AES256-SHA
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: argocd-virtualservice
#   namespace: argocd
# spec:
#   hosts:
#     - "*"
#   gateways:
#     - argocd-gateway
#   http:
#     - match:
#         - uri:
#             prefix: /argocd
#       route:
#         - destination:
#             host: argocd-server
#             port:
#               number: 80

apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      hostname: "httpbin.example.com"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpbin
spec:
  parentRefs:
    - name: httpbin-gateway
  hostnames: ["httpbin.example.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /status
        - path:
            type: PathPrefix
            value: /delay
      backendRefs:
        - name: httpbin
          port: 8000
